# esp_ai_engine

./: CMakeLists.txt  LICENSE  README.md  library.properties  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
.github/workflows/: ai_vox_board_build.yml  arduino_build.yml  arduino_esp32_build.yml  arduino_esp32s3_build.yml  esp_idf_build.yml  platform_io_build.yml
examples/: build_esp32s3_psram_opi.sh
examples/ai_vox_board/ai_vox_board/: CMakeLists.txt  audio_input_device_sph0645.h  idf_component.yml  lv_conf.h  main.cpp
examples/esp32/ai_voice/: CMakeLists.txt  build_opt.h  main.cpp
examples/esp32/ai_voice_display_lcd/: build_opt.h  main.cpp
examples/esp32/ai_voice_display_oled/: CMakeLists.txt  main.cpp  wifi.h
examples/esp32s3/ai_voice/: CMakeLists.txt  main.cpp
examples/esp32s3/ai_voice_display_lcd/: CMakeLists.txt  build_opt.h  main.cpp
examples/esp32s3/ai_voice_display_oled/: CMakeLists.txt  idf_component.yml  main.cpp
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Kconfig.projbuild  audio_input_device.h  audio_output_device.h  esp_ai_engine.h  esp_ai_engine_observer.h  i2s_std_audio_input_device.cpp  i2s_std_audio_input_device.h  i2s_std_audio_output_device.cpp  i2s_std_audio_output_device.h  idf_component.yml  iot_entity.h
src/core/: CMakeLists.txt  audio_input_engine.cpp  audio_input_engine.h  audio_output_engine.cpp  audio_output_engine.h  esp_ai_engine.cpp  esp_ai_engine_impl.cpp  esp_ai_engine_impl.h
src/core/clogger/: clogger.h
src/core/flex_array/: flex_array.h
src/core/iot/: iot_entity.cpp  iot_manager.cpp  iot_manager.h
src/core/messaging/: message_queue.h
